--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </main>
 
             <footer>
-                <p>&copy; 2025 Célia Bocage - Tous droits réservés.</p>
+                <p>&copy; <span id="year"></span> Célia Bocage - Tous droits réservés.</p>
             </footer>
         </div>
     </div>
