--- a/navigation/passions.html
+++ b/navigation/passions.html
@@ -90,7 +90,7 @@
     </main>
 
     <footer>
-      © <span id="year"></span> Célia Bocage
+      <p>&copy; <span id="year"></span> Célia Bocage - Tous droits réservés.</p>
     </footer>
   </div> 
 </div>
