--- a/navigation/vie-associative.html
+++ b/navigation/vie-associative.html
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-      © <span id="year"></span> Célia Bocage
+      <p>&copy; <span id="year"></span> Célia Bocage - Tous droits réservés.</p>
     </footer>
   </div> 
 </div>
