--- a/navigation/projets.html
+++ b/navigation/projets.html
@@ -16,12 +16,12 @@
 
     <nav>
         <ul id="menuList">
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="navigation/formations.html">Formations</a></li>
-            <li><a href="navigation/experiences.html">Expériences</a></li>
-            <li><a href="navigation/projets.html">Projets</a></li>
-            <li><a href="navigation/vie-associative.html">Vie associative</a></li>
-            <li><a href="navigation/passions.html">Passions</a></li>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="formations.html">Formations</a></li>
+            <li><a href="experiences.html">Expériences</a></li>
+            <li><a href="projets.html">Projets</a></li>
+            <li><a href="vie-associative.html">Vie associative</a></li>
+            <li><a href="passions.html">Passions</a></li>
         </ul>
     </nav>
 </header>
