--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="chips">
                                 <span class="chip">Python</span> <span class="chip">C#</span> <span class="chip">SQL</span>
                                 <span class="chip">HTML</span> <span class="chip">C</span> <span class="chip">Assembly</span>
-                                <span class="chip">JavaScript</span>
+                                <span class="chip">JavaScript</span> <span class="chip">CSS</span>
                             </div>
                         </div>
                         <div class="chips-list">
@@ -69,7 +69,7 @@
                         <div class="chips-list">
                             <h4>SYSTÈMES</h4>
                             <div class="chips">
-                                <span class="chip">Linux</span> <span class="chip">Windows</span>
+                                <span class="chip">Linux</span> <span class="chip">Windows</span> <span class="chip">MacOS</span>
                             </div>
                         </div>
                         <div class="chips-list">
@@ -112,6 +112,9 @@
                             <ul>
                                 <li>Cours principaux : Algorithmique, Mathématiques</li>
                                 <li>Semestre à l'étranger : Game Design - ATU, Irlande</li>
+                                <li>Apprentissage de la programmation a l'aide de multiple travaux pratiques et de projets</li>
+                                <li>Projet jeux video 3D - Premiere Annee</li>
+                                <li>Projet OCR - Deuxieme Annee</li>
                             </ul>
                         </section>
                         <section class="cv-item">
@@ -120,6 +123,11 @@
                                 <span class="location">Sligo, Irlande</span>
                                 <span class="date">jan. 2025 - juin 2025</span>
                             </div>
+                            <ul>
+                                <li>Apprentissage de la modelisation 3D</li>
+                                <li>Projet jeu video 3D</li>
+                                <li>Projet logiciel de gestion de recettes de cuisine</li>
+                            </ul>
                         </section>
                         <section class="cv-item">
                             <h3>BAFA</h3>
@@ -139,6 +147,7 @@
                             </div>
                             <ul>
                                 <li>Spécialités Mathématiques, Physique-chimie</li>
+                                <li>Option Math Expertes</li>
                             </ul>
                         </section>
 
@@ -150,7 +159,6 @@
                                 <span class="date">2e semestre</span>
                             </div>
                             <ul>
-                                <li>Projet jeu vidéo (2e semestre EPITA)</li>
                                 <li>Modélisation d'une carte de jeu 3D avec le logiciel Blender</li>
                                 <li>Confection d'un menu de changement de commande en C# a l'aide json</li>
                                 <li>Familiarisation avec un logiciel de creation de jeux video comme Godot</li>
@@ -163,7 +171,10 @@
                                 <span class="date">3e semestre</span>
                             </div>
                             <ul>
-                                <li>Logiciel de résolution de mots cachés (OCR, 3e semestre EPITA)</li>
+                                <li>Creation d'une intelligence artificielle capable de reconnaitre les lettres de l'alphabet Francais en langage C</li>
+                                <li>Developpement de l'interface graphique du logiciel avec GTK et Glade</li>
+                                <li>Lien entre toute les partie du projet</li>
+                                <li>Creation d'une base de donnee pour le machine learning</li>
                             </ul>
                         </section>
                         <section class="cv-item">
@@ -173,7 +184,33 @@
                                 <span class="date">Semestre à l'étranger</span>
                             </div>
                             <ul>
-                                <li>Projet logiciel de recettes de cuisine (ATU Sligo)</li>
+                                <li>Creation d'une base de donnee avec maria DB</li>
+                                <li>Lier l'interface graphique a du backend avec des requetes SQL et LINQ simples</li>
+                                <li>Deploiement du logiciel depuis VSCode</li>
+                                <li>Creation d'une interface graphique a multiple page en XAML</li>
+                            </ul>
+                        </section>
+                        <section class="cv-item">
+                            <h3>Jeux video 3D</h3>
+                            <div class="item-details">
+                                <span class="location">ATU Sligo, Irlande</span>
+                                <span class="date">Semestre a l'etranger</span>
+                            </div>
+                            <ul>
+                                <li>Backend realise en C#</li>
+                                <li>Carte 3D et textures realisee avec le logiciel MAYA et le logiciel PAINT</li>
+                                <li>Realisation du jeu avec Unreal Engine</li>
+                            </ul>
+                        </section>
+                        <section class="cv-item">
+                            <h3>Projet personnel : Portfollio</h3>
+                            <div class="item-details">
+                                <span class="location">Le Kremlin Bicetre</span>
+                                <span class="date">Continu</span>
+                            </div>
+                            <ul>
+                                <li>Projet entierement realise en HTML et CSS</li>
+                                <li>Vibe coding</li>
                             </ul>
                         </section>
 
@@ -182,7 +219,7 @@
                             <h3>Stage Data Science - ArtMajeur</h3>
                             <div class="item-details">
                                 <span class="location">Levallois-Perret</span>
-                                <span class="date">4 mois</span>
+                                <span class="date">10 mois</span>
                             </div>
                             <ul>
                                 <li><strong>Analyse data & comportements</strong> : SQL, Python, statistiques.</li>
@@ -237,7 +274,7 @@
                             </ul>
                         </section>
                         <section class="cv-item">
-                            <h3>Membre de La cave - Association de vins et de produits du terroir français</h3>
+                            <h3>Presidente de La cave - Association de vins et de produits du terroir français</h3>
                             <div class="item-details">
                                 <span class="location">EPITA, Le Kremlin-Bicêtre</span>
                                 <span class="date">2024-</span>
