--- a/navigation/formations.html
+++ b/navigation/formations.html
@@ -48,8 +48,9 @@
             <div class="card-content">
                 <ul class="card-description">
                     <li>Cours principaux : Algorithmique, Mathématiques, Programmation.</li>
+                    <li>Semestre a l'etrager (Irlande)</li>
                     <li>Apprentissage approfondi des langages C, C#, Python et SQL.</li>
-                    <li>Projets techniques semestriels (Jeux vidéo, OCR).</li>
+                    <li>Projets techniques semestriels (Jeux vidéo, OCR (Reconnaissance Optique de Caracteres)).</li>
                 </ul>
             </div>
 
@@ -57,7 +58,8 @@
                 <span class="chip">Informatique</span>
                 <span class="chip">Algorithmique</span>
                 <span class="chip">Mathématiques</span>
-                <span class="chip">C# / Python</span>
+                <span class="chip">C# / Python / C / RUST / Assembly</span>
+                <span class="chip">Projets</span>
             </div>
         </section>
 
@@ -68,13 +70,14 @@
                     <span class="location">ATU Sligo, Irlande</span>
                     <span class="date">Jan. 2025 - Juin 2025</span>
                 </div>
-            </div>
-            
+            </div>      
             <div class="card-content">
                 <ul class="card-description">
                     <li>Semestre international dédié au Game Design et au développement.</li>
                     <li>Immersion anglophone (Niveau courant).</li>
                     <li>Réalisation d'un projet de logiciel de recettes de cuisine.</li>
+                    <li>Realisation d'un projet de jeu video 3D sur unreal engine</li>
+                    <li>Cours de design et modelisation 3D</li>
                 </ul>
             </div>
             <div class="chips-footer">
@@ -82,6 +85,8 @@
                 <span class="chip">Game Design</span>
                 <span class="chip">Anglais</span>
                 <span class="chip">Projet</span>
+                <span class="chip">C# / SQL / LINQ / XAML</span>
+                <span class="chip">PhotoShop / MAYA</span>
             </div>
         </section>
 
