--- a/navigation/experiences.html
+++ b/navigation/experiences.html
@@ -30,7 +30,7 @@
       <h1>Expériences Professionnelles</h1>
 
       <div class="page-intro-details">
-        <p class="intro-summary">Stage de 4 mois en Data Science et recherche de stage en Cybersécurité (fév. - juil. 2026).</p>
+        <p class="intro-summary">Recherche actuelle d'alternance en Cybersécurité (sept. 2026 - juil. 2029).</p>
       </div>
 
       <div class="experience-grid" id="experiences">
@@ -49,6 +49,9 @@
                     <li>Analyse data & comportements (SQL, Python, statistiques).</li>
                     <li>Modélisation & sémantique (classification, BERT).</li>
                     <li>Visualisation & impact (dashboards, rapports, optimisation data-driven).</li>
+                    <li>Recherche continue de nouvelles strategies statistiques</li>
+                    <li>Gestion de la base de donnees</li>
+                    <li>Creation d'un tableau interactif pour mieux relancer une etude</li>
                 </ul>
             </div>
 
@@ -57,6 +60,7 @@
                 <span class="chip">SQL</span>
                 <span class="chip">BERT</span>
                 <span class="chip">Data Science</span>
+                <span class="chip">Strategie</span>
             </div>
         </section>
 
