--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="content-area">
             <main>
                 <h1>CÉLIA BOCAGE</h1>
-                <p class="tagline cv-title-info">Étudiante à l'EΡITA | Recherche d'alternance en cybersécurité (sept. 2026 - juil. 2029)</p>
+                <p class="tagline cv-title-info">Étudiante à l'<strong>EPITA</strong> | Recherche d'<strong>alternance en cybersécurité</strong> (sept. 2026 - juil. 2029)</p>
                 <section style="margin-bottom: 2rem;">
                     <p style="color: #222;">
-                        Passionnée de cybersécurité, j'analyse et teste des systèmes via des projets, du pentest et des CTF.
-                        Active sur TryHackMe et HackTheBox, je recherche une alternance en sécurité offensive, SOC ou analyse de vulnérabilités.
+                        Passionnée de <strong>cybersécurité</strong>, j'analyse et teste des systèmes via des projets, du <strong>pentest</strong> et des <strong>CTF</strong>.
+                        Active sur <strong>TryHackMe</strong> et <strong>HackTheBox</strong>, je recherche une alternance en <strong>sécurité offensive</strong>, <strong>SOC</strong> ou analyse de vulnérabilités.
                     </p>
                 </section>
 
@@ -42,11 +42,20 @@
                         <div class="cv-photo-container">
                             <img src="assets/Images/Photo_CV.png" class="cv-photo" alt="Photo de Célia Bocage">
                         </div>
+                        
+                        <div class="chips-list" style="margin-bottom: 1.5rem;">
+                            <div class="chips" style="justify-content: center;">
+                                <span class="chip" style="background-color: #28a745; color: white; border-color: #28a745;">🟢 Recherche Alternance</span>
+                                <span class="chip" style="border-color: white; color: white;">📍 Île-de-France</span>
+                                <span class="chip" style="border-color: white; color: white;">📅 Sept. 2026</span>
+                            </div>
+                        </div>
+
                         <h2>CONTACT</h2>
                         <ul class="contact-block">
                             <li><span class="contact-icon">📧</span> <a href="mailto:celia.bocage.pro@gmail.com">celia.bocage.pro@gmail.com</a></li>
                             <li><span class="contact-icon">📍</span> 94270 Le Kremlin-Bicêtre</li>
-                            <li><span class="contact-icon">🔗</span> <a href="https://www.linkedin.com/in/célia-bocage-549b082ab" target="_blank">LinkedIn: Celia Bocage</a></li>
+                            <li><span class="contact-icon">🔗</span> <a href="https://www.linkedin.com/in/célia-bocage-549b082ab" target="_blank">LinkedIn: Célia Bocage</a></li>
                             <li><span class="contact-icon">💻</span> <a href="https://github.com/CeliaBocage" target="_blank">GitHub: CeliaBocage</a></li>
                         </ul>
 
@@ -82,50 +91,50 @@
 
                         <h2>LANGUES</h2>
                         <ul class="cv-list contact-block">
-                            <li>Français (Langue maternelle)</li>
-                            <li>Anglais (Courant - 6 mois en Irlande, TOEIC, TOEFFL)</li>
-                            <li>Espagnol (Intermédiaire)</li>
+                            <li><strong>Français</strong> (Langue maternelle)</li>
+                            <li><strong>Anglais</strong> (Courant - 6 mois en Irlande, TOEIC, TOEFL)</li>
+                            <li><strong>Espagnol</strong> (Intermédiaire)</li>
                             <li>Notions d'Italien</li>
                         </ul>
 
                         <h2><a href="navigation/passions.html" style="color: #66c7f4;">PASSIONS</a></h2>
                         <ul class="cv-list contact-block">
-                            <li>Apprentissage autonome de la cybersécurité :</li>
-                            <li style="margin-left: 1rem; list-style: none;">(TryHackMe , HackTheBox , RootMe , HackThisSite )</li>
-                            <li>Photographie, Voyage, Rugby, Œnologie, Surf</li>
+                            <li>Apprentissage autonome de la <strong>cybersécurité</strong> :</li>
+                            <li style="margin-left: 1rem; list-style: none; font-size: 0.85rem;">(TryHackMe, HackTheBox, RootMe, HackThisSite)</li>
+                            <li style="margin-top: 0.5rem;">Photographie, Voyage, Rugby, Œnologie, Surf</li>
                         </ul>
 
                         <h2>VERSIONS PDF</h2>
                         <ul class="contact-block">
-                            <li><span class="contact-icon">📄</span> <a href="assets/Docs/CV Celia BOCAGE.pdf" download="CV_Celia_Bocage">Télécharger mon CV VF(PDF)</a></li>
+                            <li><span class="contact-icon">📄</span> <a href="assets/Docs/CV Celia BOCAGE.pdf" download="CV_Celia_Bocage">Télécharger mon CV VF (PDF)</a></li>
                         </ul>
                     </div>
 
                     <div class="cv-main-content">
                         <h2><a href="navigation/formations.html" style="color: rgb(57, 57, 105);">FORMATIONS</a></h2>
                         <section class="cv-item">
-                            <h3>3eme année en école d'ingénieurs <strong>informatique</strong> - EPITA</h3>
+                            <h3>3e année en école d'ingénieurs <strong>informatique</strong> - EPITA</h3>
                             <div class="item-details">
                                 <span class="location">Villejuif</span>
-                                <span class="date">2023-</span>
+                                <span class="date">2023 - Présent</span>
                             </div>
                             <ul>
-                                <li>Cours principaux : Algorithmique, Mathématiques</li>
-                                <li>Semestre à l'étranger : Game Design - ATU, Irlande</li>
-                                <li>Apprentissage de la programmation a l'aide de multiple travaux pratiques et de projets</li>
-                                <li>Projet jeux video 3D - Premiere Annee</li>
-                                <li>Projet OCR - Deuxieme Annee</li>
+                                <li>Cours principaux : <strong>Algorithmique</strong>, <strong>Mathématiques</strong></li>
+                                <li>Semestre à l'étranger : <strong>Game Design</strong> - ATU, Irlande</li>
+                                <li>Apprentissage de la programmation à l'aide de multiples travaux pratiques et de projets</li>
+                                <li>Projet jeux vidéo 3D - Première Année</li>
+                                <li>Projet <strong>OCR</strong> - Deuxième Année</li>
                             </ul>
                         </section>
                         <section class="cv-item">
-                            <h3>Semestre a l'etranger : <strong>Game Design</strong> - ATU</h3>
+                            <h3>Semestre à l'étranger : <strong>Game Design</strong> - ATU</h3>
                             <div class="item-details">
                                 <span class="location">Sligo, Irlande</span>
-                                <span class="date">jan. 2025 - juin 2025</span>
+                                <span class="date">janv. 2025 - juin 2025</span>
                             </div>
                             <ul>
-                                <li>Apprentissage de la modelisation 3D</li>
-                                <li>Projet jeu video 3D</li>
+                                <li>Apprentissage de la <strong>modélisation 3D</strong></li>
+                                <li>Projet jeu vidéo 3D</li>
                                 <li>Projet logiciel de gestion de recettes de cuisine</li>
                             </ul>
                         </section>
@@ -147,7 +156,7 @@
                             </div>
                             <ul>
                                 <li>Spécialités Mathématiques, Physique-chimie</li>
-                                <li>Option Math Expertes</li>
+                                <li>Option Maths Expertes</li>
                             </ul>
                         </section>
 
@@ -159,9 +168,9 @@
                                 <span class="date">2e semestre</span>
                             </div>
                             <ul>
-                                <li>Modélisation d'une carte de jeu 3D avec le logiciel Blender</li>
-                                <li>Confection d'un menu de changement de commande en C# a l'aide json</li>
-                                <li>Familiarisation avec un logiciel de creation de jeux video comme Godot</li>
+                                <li><strong>Modélisation</strong> d'une carte de jeu 3D avec le logiciel <strong>Blender</strong></li>
+                                <li>Confection d'un menu de changement de commande en <strong>C#</strong> à l'aide de <strong>JSON</strong></li>
+                                <li>Familiarisation avec un moteur de jeu vidéo comme <strong>Godot</strong></li>
                             </ul>
                         </section>
                         <section class="cv-item">
@@ -171,10 +180,10 @@
                                 <span class="date">3e semestre</span>
                             </div>
                             <ul>
-                                <li>Creation d'une intelligence artificielle capable de reconnaitre les lettres de l'alphabet Francais en langage C</li>
-                                <li>Developpement de l'interface graphique du logiciel avec GTK et Glade</li>
-                                <li>Lien entre toute les partie du projet</li>
-                                <li>Creation d'une base de donnee pour le machine learning</li>
+                                <li>Création d'une <strong>intelligence artificielle</strong> capable de reconnaître les lettres de l'alphabet français en langage <strong>C</strong></li>
+                                <li>Développement de l'interface graphique du logiciel avec GTK et Glade</li>
+                                <li>Lien entre toutes les parties du projet</li>
+                                <li>Création d'une base de données pour le <strong>Machine Learning</strong></li>
                             </ul>
                         </section>
                         <section class="cv-item">
@@ -184,32 +193,32 @@
                                 <span class="date">Semestre à l'étranger</span>
                             </div>
                             <ul>
-                                <li>Creation d'une base de donnee avec maria DB</li>
-                                <li>Lier l'interface graphique a du backend avec des requetes SQL et LINQ simples</li>
-                                <li>Deploiement du logiciel depuis VSCode</li>
-                                <li>Creation d'une interface graphique a multiple page en XAML</li>
+                                <li>Création d'une base de données avec <strong>MariaDB</strong></li>
+                                <li>Liaison de l'interface graphique au backend avec des requêtes <strong>SQL</strong> et <strong>LINQ</strong> simples</li>
+                                <li>Déploiement du logiciel depuis VSCode</li>
+                                <li>Création d'une interface graphique à multiples pages en <strong>XAML</strong></li>
                             </ul>
                         </section>
                         <section class="cv-item">
-                            <h3>Jeux video 3D</h3>
+                            <h3>Jeu vidéo 3D</h3>
                             <div class="item-details">
                                 <span class="location">ATU Sligo, Irlande</span>
-                                <span class="date">Semestre a l'etranger</span>
+                                <span class="date">Semestre à l'étranger</span>
                             </div>
                             <ul>
-                                <li>Backend realise en C#</li>
-                                <li>Carte 3D et textures realisee avec le logiciel MAYA et le logiciel PAINT</li>
-                                <li>Realisation du jeu avec Unreal Engine</li>
+                                <li>Backend réalisé en <strong>C#</strong></li>
+                                <li>Carte 3D et textures réalisées avec le logiciel <strong>Maya</strong> et Paint</li>
+                                <li>Réalisation du jeu avec <strong>Unreal Engine</strong></li>
                             </ul>
                         </section>
                         <section class="cv-item">
-                            <h3>Projet personnel : Portfollio</h3>
+                            <h3>Projet personnel : Portfolio</h3>
                             <div class="item-details">
-                                <span class="location">Le Kremlin Bicetre</span>
+                                <span class="location">Le Kremlin-Bicêtre</span>
                                 <span class="date">Continu</span>
                             </div>
                             <ul>
-                                <li>Projet entierement realise en HTML et CSS</li>
+                                <li>Projet entièrement réalisé en <strong>HTML</strong> et <strong>CSS</strong></li>
                                 <li>Vibe coding</li>
                             </ul>
                         </section>
@@ -246,42 +255,42 @@
                             </div>
                             <ul>
                                 <li>Réception, gestion de stock et mise en rayon des produits.</li>
-                                <li><strong>Rigueur et rapidité d'exécution.</strong></li>
+                                <li><strong>Rigueur</strong> et rapidité d'exécution.</li>
                             </ul>
                         </section>
 
                         <h2><a href="navigation/vie-associative.html" style="color: rgb(57, 57, 105);">VIE ASSOCIATIVE</a></h2>
                         <section class="cv-item">
-                            <h3>Animatrice (Bénévolat) - Scout et Guide de France</h3>
+                            <h3>Animatrice (Bénévolat) - Scouts et Guides de France</h3>
                             <div class="item-details">
                                 <span class="location">Gaillac</span>
-                                <span class="date">2023-</span>
+                                <span class="date">2023 - Présent</span>
                             </div>
                             <ul>
                                 <li>Encadrement de groupes d'enfants et animation d'activités éducatives.</li>
-                                <li>Garantie de la sécurité et accompagnement du développement global (affectif, intellectuel, social)</li>
+                                <li>Garantie de la sécurité et accompagnement du développement global (affectif, intellectuel, social).</li>
                             </ul>
                         </section>
                         <section class="cv-item">
                             <h3>Staff' Communication</h3>
                             <div class="item-details">
                                 <span class="location">EPITA, Le Kremlin-Bicêtre</span>
-                                <span class="date">2025-</span>
+                                <span class="date">2025 - Présent</span>
                             </div>
                             <ul>
-                                <li>Encadrement d'étudiants lors d'événement de communication.</li>
+                                <li>Encadrement d'étudiants lors d'événements de communication.</li>
                                 <li>Représentation de l'école sur les salons et JPO.</li>
                             </ul>
                         </section>
                         <section class="cv-item">
-                            <h3>Presidente de La cave - Association de vins et de produits du terroir français</h3>
+                            <h3>Présidente de La Cave - Association de vins et de produits du terroir français</h3>
                             <div class="item-details">
                                 <span class="location">EPITA, Le Kremlin-Bicêtre</span>
-                                <span class="date">2024-</span>
+                                <span class="date">2024 - Présent</span>
                             </div>
                             <ul>
-                                <li>Organisation de dégustation de vin et de fromage.</li>
-                                <li>Organisation de visite de Cave et de Fermes.</li>
+                                <li>Organisation de dégustations de vin et de fromage.</li>
+                                <li>Organisation de visites de caves et de fermes.</li>
                             </ul>
                         </section>
                     </div>
