--- a/navigation/formations.html
+++ b/navigation/formations.html
@@ -31,7 +31,7 @@
       <h1>Formations</h1>
 
       <div class="page-intro-details">
-        <p class="intro-summary">Parcours académique axé sur l'ingénierie informatique et l'ouverture internationale.</p>
+        <p class="intro-summary">Parcours académique axé sur l'<strong>ingénierie informatique</strong> et l'ouverture <strong>internationale</strong>.</p>
       </div>
 
       <div class="experience-grid" id="formations">
@@ -47,10 +47,10 @@
             
             <div class="card-content">
                 <ul class="card-description">
-                    <li>Cours principaux : Algorithmique, Mathématiques, Programmation.</li>
-                    <li>Semestre a l'etrager (Irlande)</li>
-                    <li>Apprentissage approfondi des langages C, C#, Python et SQL.</li>
-                    <li>Projets techniques semestriels (Jeux vidéo, OCR (Reconnaissance Optique de Caracteres)).</li>
+                    <li>Cours principaux : <strong>Algorithmique</strong>, <strong>Mathématiques</strong>, Programmation.</li>
+                    <li>Semestre à l'étranger (Irlande).</li>
+                    <li>Apprentissage approfondi des langages <strong>C</strong>, <strong>C#</strong>, <strong>Python</strong> et <strong>SQL</strong>.</li>
+                    <li>Projets techniques semestriels : <strong>Jeux vidéo</strong>, <strong>OCR</strong> (Reconnaissance Optique de Caractères).</li>
                 </ul>
             </div>
 
@@ -58,7 +58,7 @@
                 <span class="chip">Informatique</span>
                 <span class="chip">Algorithmique</span>
                 <span class="chip">Mathématiques</span>
-                <span class="chip">C# / Python / C / RUST / Assembly</span>
+                <span class="chip">C# / Python / C / Rust / Assembly</span>
                 <span class="chip">Projets</span>
             </div>
         </section>
@@ -68,16 +68,16 @@
                 <h2 class="card-title">Semestre à l'étranger - Game Design</h2>
                 <div class="card-details-wrapper">
                     <span class="location">ATU Sligo, Irlande</span>
-                    <span class="date">Jan. 2025 - Juin 2025</span>
+                    <span class="date">Janv. 2025 - Juin 2025</span>
                 </div>
             </div>      
             <div class="card-content">
                 <ul class="card-description">
-                    <li>Semestre international dédié au Game Design et au développement.</li>
-                    <li>Immersion anglophone (Niveau courant).</li>
-                    <li>Réalisation d'un projet de logiciel de recettes de cuisine.</li>
-                    <li>Realisation d'un projet de jeu video 3D sur unreal engine</li>
-                    <li>Cours de design et modelisation 3D</li>
+                    <li>Semestre international dédié au <strong>Game Design</strong> et au développement.</li>
+                    <li>Immersion anglophone (<strong>Niveau courant</strong>).</li>
+                    <li>Réalisation d'un projet de <strong>logiciel de recettes de cuisine</strong>.</li>
+                    <li>Réalisation d'un projet de <strong>jeu vidéo 3D</strong> sur <strong>Unreal Engine</strong>.</li>
+                    <li>Cours de design et <strong>modélisation 3D</strong>.</li>
                 </ul>
             </div>
             <div class="chips-footer">
@@ -86,7 +86,7 @@
                 <span class="chip">Anglais</span>
                 <span class="chip">Projet</span>
                 <span class="chip">C# / SQL / LINQ / XAML</span>
-                <span class="chip">PhotoShop / MAYA</span>
+                <span class="chip">Photoshop / Maya</span>
             </div>
         </section>
 
@@ -102,7 +102,7 @@
             <div class="card-content">
                 <ul class="card-description">
                     <li>Brevet d'Aptitude aux Fonctions d'Animateur.</li>
-                    <li>Spécialisation accueil de scoutisme.</li>
+                    <li>Spécialisation <strong>accueil de scoutisme</strong>.</li>
                     <li>Gestion de groupes et animation.</li>
                 </ul>
             </div>
@@ -124,7 +124,7 @@
             
             <div class="card-content">
                 <ul class="card-description">
-                    <li>Spécialités Mathématiques et Physique-chimie.</li>
+                    <li>Spécialités <strong>Mathématiques</strong> et <strong>Physique-Chimie</strong>.</li>
                     <li>Obtention du diplôme marquant la fin du cycle secondaire.</li>
                 </ul>
             </div>
