--- a/navigation/projets.html
+++ b/navigation/projets.html
@@ -64,7 +64,7 @@
 
         <section class="experience-card">
             <div class="card-header">
-                <h2 class="card-title">Projet Jeu Vidéo 3D</h2>
+                <h2 class="card-title">Projet Jeu Vidéo 3D (Godot)</h2>
                 <div class="card-details-wrapper">
                     <span class="location">EPITA</span>
                     <span class="date">2e semestre</span>
@@ -83,6 +83,30 @@
                 <span class="chip">Godot</span>
                 <span class="chip">Blender</span>
                 <span class="chip">JSON</span>
+            </div>
+        </section>
+
+        <section class="experience-card">
+            <div class="card-header">
+                <h2 class="card-title">Projet Jeu Vidéo 3D (Unreal Engine)</h2>
+                <div class="card-details-wrapper">
+                    <span class="location">ATU Sligo, Irlande</span>
+                    <span class="date">Semestre à l'étranger</span>
+                </div>
+            </div>
+            
+            <div class="card-content">
+                <ul class="card-description">
+                    <li>Réalisation complète d'un jeu 3D sous <strong>Unreal Engine</strong>.</li>
+                    <li>Développement du <strong>Backend</strong> et des scripts en <strong>C#</strong>.</li>
+                    <li>Conception de la carte 3D et des textures via le logiciel <strong>Maya</strong>.</li>
+                </ul>
+            </div>
+            <div class="chips-footer">
+                <span class="chip">Unreal Engine</span>
+                <span class="chip">C#</span>
+                <span class="chip">Maya</span>
+                <span class="chip">Game Design</span>
             </div>
         </section>
 
@@ -122,13 +146,13 @@
             <div class="card-content">
                 <ul class="card-description">
                     <li>Développement d'un site web personnel (celui-ci) entièrement "from scratch".</li>
-                    <li>Utilisation pure de <strong>HTML5</strong> et <strong>CSS3</strong> pour une maîtrise totale du code.</li>
+                    <li>Utilisation pure de <strong>HTML</strong> et <strong>CSS</strong> pour une maîtrise totale du code.</li>
                     <li>Design <strong>responsive</strong> et compatible tous navigateurs.</li>
                 </ul>
             </div>
             <div class="chips-footer">
-                <span class="chip">HTML5</span>
-                <span class="chip">CSS3</span>
+                <span class="chip">HTML</span>
+                <span class="chip">CSS</span>
                 <span class="chip">Web Design</span>
                 <span class="chip">Git</span>
             </div>
